# lib_mysqludf_stem

./: API  AUTHORS  Makefile.am  Makefile.libstemmer_c  README  config.status  configure  configure.ac  installdb.sql  lib_mysqludf_stem.cc  uninstalldb.sql
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: ax_lib_mysql.m4  ax_mysql_bin.m4
libstemmer_c/algorithms/dutch_adj/: gen  stem_ISO_8859_1.sbl
libstemmer_c/src_c/: stem_UTF_8_dutch.c
test/: stem_word.result  stem_word.test
